# Parallel-SHAP-Scalable-Explainable-AI-for-Finance

./: .gitignore  README.md  requirements.txt
data/: market_features.csv
models/: model.pkl
server/: app.py  benchmark.py  models.py  schemas.py
server/static/: index.html
src/: baseline_shap.py  mc_shap_eval.py  mc_shap_python.py  train_model.py
src/ext_cuda/: CMakeLists.txt  build.sh  mc_shap_cuda.cu
src/ext_openmp/: CMakeLists.txt  build.sh  mc_shap_openmp.cpp
