cmake_minimum_required(VERSION 3.18)
project(mc_shap_cuda LANGUAGES CXX CUDA)
find_package(Python3 REQUIRED COMPONENTS Interpreter Development.Module)
find_package(pybind11 REQUIRED)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
pybind11_add_module(mc_shap_cuda mc_shap_cuda.cu)
target_compile_features(mc_shap_cuda PRIVATE cxx_std_17)
set(CMAKE_CUDA_ARCHITECTURES 60-real 70-real 75-real 80-real 86-real 89-real)
set_target_properties(mc_shap_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
